--- a/src/Mapbender/CoreBundle/Resources/public/sass/element/featureinfo.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/element/featureinfo.scss
@@ -1,14 +1,20 @@
 .mb-element-featureinfo{
+    height: 100%;
   iframe.featureInfoFrame{
-    width: 100%;
-    border-width: 0px;
+      width: 100%;
+      height: 100%;
+      border-width: 0px;
   }
   .accordionContainer > .container{display:none}
   .accordionContainer > .container.active{display:block}
 
   .container {
-    width: 100%;
-    height: 100%;
+      width: 100%;
+      height: 100%;
   }
 
+}
+
+.popupContent .contentItem,.popupContent .container,.featureInfoTabContainer {
+    height: 90%;
 }
