fixed feature info popup size

--- a/src/Mapbender/CoreBundle/Resources/public/sass/element/featureinfo.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/element/featureinfo.scss
@@ -15,6 +15,10 @@
 
 }
 
-.popupContent .contentItem,.popupContent .container,.featureInfoTabContainer {
-    height: 90%;
+.featureInfoTabContainer {
+    top: 25px;
+    bottom: 35px;
+    position: absolute;
+    left: 25px;
+    right: 25px;
 }
