--- a/src/Mapbender/CoreBundle/Resources/public/sass/theme/mapbender3.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/theme/mapbender3.scss
@@ -34,7 +34,10 @@
       display:inline-block;
       text-wrap: avoid;
       white-space: nowrap;
-      padding:5px;
+      padding: 5px;
+      > label {
+        margin-bottom: 0;
+      }
     }
     border-bottom:solid 1px darken($contentColor, 20%);
   }
