--- a/src/Mapbender/CoreBundle/Resources/public/sass/element/basesourceswitcher.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/element/basesourceswitcher.scss
@@ -1,26 +1,6 @@
-
-.dropdownbs li {
-    text-align:center;
-    display:block;
-    border-radius:3px;
-    vertical-align:middle;
-    &[data-state=""]{
-        display:none;
-        position:absolute;   
-    }
-    &[data-state="active"]:after{
-      content:"\f107";
-      float:right;   
-    }
-    
-}
-
 .mb-element-basesourceswitcher{
   li{
-    //TOMY
-    text-align:center;
-    
-    padding:5px 7px;
+    padding:0px 5px 0px 5px;
     background-color: #b5b5b5;
     display:inline-block;
     margin-right:-4px;
@@ -38,16 +18,8 @@
     &:hover, &[data-state="active"]{
       color:$firstColor;
       background-color: $contentColor;
-      opacity:1;
     }
-    
-    &[data-state="active"]:before{
-        content:""
-    }
-    
-  
   }
-  
   li ul{
     position: absolute;
     text-align: right;
@@ -55,7 +27,8 @@
     z-index: 1;
   }
   li ul li{
-    width: 100%;
+    /*width: 100%;*/
+    display: list-item;
     border:solid 1px $thirdColor;
     border-bottom-width: 0px;
     white-space: nowrap;
