--- a/src/Mapbender/CoreBundle/Resources/views/Element/basesourceswitcher.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/basesourceswitcher.html.twig
@@ -5,7 +5,7 @@
     <li class="basesourcesetswitch notgroup" data-state="{% if loop.first %}active{% endif %}" data-sourceset="{% for source in opts.sources %}{% if not loop.first %},{% endif %}{% spaceless %}{{- source -}}{% endspaceless %}{% endfor %}" >{{ opts.title | trans }}</li>
     {% else %}
     <li class="basesourcegroup" data-state="{% if loop.first %}active{% endif %}">
-      <span>{{ name | trans }}</span>
+      <!--span-->{{ name | trans }}<!--/span-->
       <ul class="basesourcesubswitcher hidden">
       {% for opt in opts %}
           <li class="basesourcesetswitch" data-state="{% if loop.first %}active{% endif %}" data-sourceset="{% for source in opt.sources %}{% if not loop.first %},{% endif %}{% spaceless %}{{- source -}}{% endspaceless %}{% endfor %}" >{{ opt.title | trans }}</li>
