show only available contenxt menu options

--- a/src/Mapbender/CoreBundle/Resources/views/Element/layertree.json.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/layertree.json.twig
@@ -5,5 +5,6 @@
 "mb.core.layertree.const.outofbounds": "{{ "mb.core.layertree.const.outofbounds" | trans}}",
 "mb.core.layertree.const.parentinvisible": "{{ "mb.core.layertree.const.parentinvisible" | trans}}",
 "mb.core.metadata.popup.title" : "{{ "mb.core.metadata.popup.title" | trans }}",
-"mb.core.metadata.popup.btn.ok" : "{{ "mb.core.metadata.popup.btn.ok" | trans }}"
+"mb.core.metadata.popup.btn.ok" : "{{ "mb.core.metadata.popup.btn.ok" | trans }}",
+"mb.core.layertree.contextmenu.nooption": "{{ "mb.core.layertree.contextmenu.nooption" | trans}}"
 }
