--- a/src/Mapbender/CoreBundle/Resources/views/Element/featureinfo.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/featureinfo.html.twig
@@ -19,7 +19,9 @@
         </div>
         <div id="" class="container js-content" data-idname="container">
             <div class="accordion-cell">
-                <div class="accordion-wrapper js-content-content"></div>
+                <div class="accordion-wrapper">
+                    <div class="js-content-content"></div>
+                </div>
             </div>
        </div>
     </div>
