updated regional, responsive template; missing js/css

--- a/src/Mapbender/CoreBundle/Resources/public/sass/template/responsive.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/template/responsive.scss
@@ -1,6 +1,7 @@
 @import "libs/variables";
 @import "libs/mixins";
 @import "libs/icons";
+@import "theme/mapbender3";
 
 .templateWrapper{
   height: 100%;
