fix featureInfo tabs display

--- a/src/Mapbender/CoreBundle/Resources/public/sass/element/featureinfo.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/element/featureinfo.scss
@@ -55,6 +55,10 @@
             }
           }
         }
+        .featureInfoTabContainer {
+          height:100%;
+          >.container{height:90%;}
+        }
       }
     }
   }
