fix featureinfo print, show featureinfo

--- a/src/Mapbender/CoreBundle/Resources/public/sass/element/featureinfo.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/element/featureinfo.scss
@@ -57,7 +57,11 @@
         }
         .featureInfoTabContainer {
           height:100%;
-          >.container{height:90%;}
+          >.container.active{
+            height:90%;
+            overflow:auto;
+            >iframe{height:98%;}
+          }
         }
       }
     }
