--- a/src/Mapbender/ManagerBundle/Resources/views/Application/form-layersets.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/form-layersets.html.twig
@@ -9,7 +9,7 @@
         <h3 class="subTitle">{{ layerset.title }}</h3>
         <table class="tableCore layersetTable" data-id="{{ layerset.id }}">
           <thead>
-            <tr>
+            <tr class='doNotFilter'>
               <th title="{{ 'mb.manager.admin.layerset.id_description' | trans }}">{{ 'mb.manager.admin.layerset.id' | trans }}</th>
               <th>{{ 'mb.manager.admin.layerset.title' | trans }}</th>
               <th>{{ 'mb.manager.admin.layerset.type' | trans }}</th>
