--- a/src/Mapbender/ManagerBundle/Resources/views/Element/map.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Element/map.html.twig
@@ -5,6 +5,10 @@
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.dpi) }}{{ form_widget(form.configuration.dpi) }}
     <div class="clearContainer"></div>
+    {{ form_label(form.configuration.tileSize) }}{{ form_widget(form.configuration.tileSize) }}
+    <div class="clearContainer"></div>
+    {{ form_label(form.configuration.wmsTileDelay) }}{{ form_widget(form.configuration.wmsTileDelay) }}
+    <div class="clearContainer"></div>
     {{ form_label(form.configuration.srs) }}{{ form_widget(form.configuration.srs) }}
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.units) }}{{ form_widget(form.configuration.units) }}
