--- a/src/Mapbender/CoreBundle/Resources/public/sass/element/layertree.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/element/layertree.scss
@@ -207,3 +207,18 @@ $layer-slider-bar-height: 5px;
     bottom: -5px;
   }
 }
+
+/*
+* Only if layer tree is integrated in side pane content (not as tab or accordion)
+*/
+.sideContent {
+  > .mb-element-layertree {
+    .leave {
+      &[data-state="loading"], &[data-state="error"] {
+        &:before {
+          @include absolute('' $space+16px '' '');
+        }
+      }
+    }
+  }
+}
