fix backround-color for accordion

--- a/src/Mapbender/CoreBundle/Resources/public/sass/modules/_tabcontainer.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/modules/_tabcontainer.scss
@@ -55,7 +55,7 @@
 
     &.active{
       cursor:default;
-      background-color:darken(#6fb536, 10%);
+      background-color:darken($buttonFirstColor, 10%);
       color:$lightFontColor;
     }
   }
@@ -87,9 +87,9 @@
     }
     &.active{
       cursor:default;
-      background-color:darken(#6fb536, 10%);
+      background-color:darken($buttonFirstColor, 10%);
       color:$lightFontColor;
-      >div{background-color:darken(#6fb536, 10%);}          
+      >div{background-color:darken($buttonFirstColor, 10%);}          
     }
   }
   .container-accordion{
