Fix responsive.scss for responsive template

--- a/src/Mapbender/CoreBundle/Resources/public/sass/template/responsive.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/template/responsive.scss
@@ -1,3 +1,7 @@
+@import url("components/normalize-css/normalize.css");
+@import url("components/open-sans/open-sans.css");
+@import url("components/bootstrap/css/bootstrap.min.css");
+
 @import "libs/variables";
 @import "libs/mixins";
 @import "libs/icons";
