--- a/src/Mapbender/CoreBundle/Resources/views/index.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/index.html.twig
@@ -6,7 +6,9 @@
     <title>{% block title %}{% endblock %}</title>
     <meta name="description" content="Mapbender 3">
     <script language="JavaScript">
-        if(/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)) {
+        if(/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)
+        && !(/Firefox/i.test(navigator.userAgent))
+        ) {
             document.write('<meta name="viewport" content="width=device-width; initial-scale=0.6; maximum-scale=0.6; minimum-scale=0.6; user-scalable=no;target-densityDpi=240dpi"/>');
         }
     </script>
