Fix mobile icons #311

--- a/src/Mapbender/MobileBundle/Resources/public/sass/theme/mobile.scss
+++ b/src/Mapbender/MobileBundle/Resources/public/sass/theme/mobile.scss
@@ -364,6 +364,7 @@ fieldset{
           opacity: 1;
 
           &:before{
+            font-family: "mapbender-icons", "FontAwesome" !important;
             color: $ciColor;
           }
 
