--- a/src/Mapbender/CoreBundle/Resources/views/Element/printclient.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/printclient.html.twig
@@ -37,6 +37,8 @@
         {% if configuration.rotatable is defined and configuration.rotatable == 1 %}
             <label class="labelInput" for="rotation">{{ 'mb.core.printclient.label.rotation' | trans }}</label>
             <input class="input" type="text" name="rotation" value="0"/>
+	    {% else %}
+			<input class="input" type="text" name="rotation" value="0" style="display: none"/>
         {% endif %}
 
         {% if configuration.optional_fields is defined %}
