add translations, clean code

--- a/src/Mapbender/CoreBundle/Resources/views/ElementAdmin/featureinfoext.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/ElementAdmin/featureinfoext.html.twig
@@ -1,13 +1,15 @@
 <div class="elementForm defaultForm elementFormFeatureInfoExt">
+  <div class="left">
+    {{ form_widget(form.configuration.load_declarative_wms) }}<label for="{{form.configuration.load_declarative_wms.vars.id}}" class="labelCheck">{{ "mb.core.admin.featureinfoext.label.loaddeclarativewms"|trans }}</label>
+  </div>
+  <div class="left">
+    {{ form_widget(form.configuration.highlight_source) }}<label for="{{form.configuration.highlight_source.vars.id}}" class="labelCheck">{{ "mb.core.admin.featureinfoext.label.highlightsource"|trans }}</label>
+  </div>
   <div class="clearContainer"></div>
   {{ form_label(form.title) }}{{ form_widget(form.title) }}
   <div class="clearContainer"></div>
   {{ form_label(form.configuration.map) }}{{ form_widget(form.configuration.map) }}
   <div class="clearContainer"></div>
   {{ form_label(form.configuration.featureinfo) }}{{ form_widget(form.configuration.featureinfo) }}
-  <div class="clearContainer"></div>
-  {{ form_label(form.configuration.highlightSource) }}{{ form_widget(form.configuration.highlightSource) }}
-  <div class="clearContainer"></div>
-  {{ form_label(form.configuration.loadWms) }}{{ form_widget(form.configuration.loadWms) }}
   <div class="clearContainer"></div>
 </div>
