--- a/src/Mapbender/CoreBundle/Resources/views/corebundle.trans.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/corebundle.trans.twig
@@ -39,6 +39,13 @@
 {{ "mb.core.featureinfo.tag.info" | trans}}
 {{ "mb.core.featureinfo.tag.dialog" | trans}}
 
+{{ "mb.core.featureinfoext.class.title" | trans}}
+{{ "mb.core.featureinfoext.class.description" | trans}}
+{{ "mb.core.featureinfoext.tag.featureinfo" | trans}}
+{{ "mb.core.featureinfoext.tag.feature" | trans}}
+{{ "mb.core.featureinfoext.tag.info" | trans}}
+{{ "mb.core.featureinfoext.tag.extension" | trans}}
+
 {{ "mb.core.gpsposition.class.title" | trans}}
 {{ "mb.core.gpsposition.class.description" | trans}}
 {{ "mb.core.gpsposition.tag.gpsposition" | trans}}
