Add default scale factor variable for mobile template. Closes #338.

--- a/src/Mapbender/MobileBundle/Resources/views/Template/mobile.html.twig
+++ b/src/Mapbender/MobileBundle/Resources/views/Template/mobile.html.twig
@@ -1,3 +1,4 @@
+{% set scaleFactor = 1 %}
 {% extends "MapbenderCoreBundle::frontend.html.twig" %}
 
 {% block title %}Mapbender3 - {{ application.title }}{% endblock %}
