--- a/src/Mapbender/CoreBundle/Resources/views/index.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/index.html.twig
@@ -9,7 +9,9 @@
         if(/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)
         && !(/Firefox/i.test(navigator.userAgent))
         ) {
-            document.write('<meta name="viewport" content="width=device-width; initial-scale=0.6; maximum-scale=0.6; minimum-scale=0.6; user-scalable=no;target-densityDpi=240dpi"/>');
+            var scaleFactor = {{ scaleFactor|default('0.7') }};
+            var density = "{{ density|default('240dpi') }}";
+            document.write('<meta name="viewport" content="width=device-width; initial-scale='+scaleFactor+'; maximum-scale='+scaleFactor+'; minimum-scale='+scaleFactor+' user-scalable=no;target-densityDpi='+density+'"/>');
         }
     </script>
     {##}
