--- a/src/Mapbender/CoreBundle/Resources/views/index.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/index.html.twig
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>{% block title %}{% endblock %}</title>
     <meta name="description" content="Mapbender 3">
+    {% block mobilejs %}
     <script language="JavaScript">
         if(/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)
         && !(/Firefox/i.test(navigator.userAgent))
@@ -14,6 +15,7 @@
             document.write('<meta name="viewport" content="width=device-width; initial-scale='+scaleFactor+'; maximum-scale='+scaleFactor+'; minimum-scale='+scaleFactor+' user-scalable=no;target-densityDpi='+density+'"/>');
         }
     </script>
+    {% endblock %}
     {##}
     <link rel="shortcut icon" href="{% block favicon %}{% endblock %}" />
 
