--- a/src/Mapbender/MobileBundle/Resources/public/sass/theme/mobile.scss
+++ b/src/Mapbender/MobileBundle/Resources/public/sass/theme/mobile.scss
@@ -447,8 +447,13 @@ fieldset{
   background-color: $ciColor4;
   @include absolute(50% '' '' 50%);
   @include transform(translate(-50%, -50%));
-
-  img.app-screenshot {max-width: 100%;}
+  max-width: 100%;
+  max-height: 100%;
+  img.app-screenshot {
+    max-width: 100%;
+    height: auto;
+    width: auto\9; /* ie8 */
+  }
   p.app-title {
     font-size:$fontSize*2;
     line-height:$fontSize*2;
